include/sam3/sam3.h


sam3_ctx *sam3_init(void);
struct sam3_cache_opts {
	int         n_image_slots;
	int         n_text_slots;
	size_t      image_mem_budget_bytes;
	const char *image_spill_dir;
};
sam3_ctx *sam3_init_ex(const struct sam3_cache_opts *opts);
void sam3_cache_clear(sam3_ctx *ctx, unsigned which);
struct sam3_cache_stats {
	uint64_t image_hits, image_misses, image_evictions;
	uint64_t text_hits,  text_misses,  text_evictions;
};
void sam3_cache_stats(const sam3_ctx *ctx, struct sam3_cache_stats *out);
void sam3_free(sam3_ctx *ctx);
enum sam3_error sam3_load_model(sam3_ctx *ctx, const char *path);
enum sam3_error sam3_load_bpe(sam3_ctx *ctx, const char *path);
enum sam3_error sam3_set_image(sam3_ctx *ctx, const uint8_t *pixels,
			       int width, int height);
enum sam3_error sam3_set_image_file(sam3_ctx *ctx, const char *path);
void sam3_set_prompt_space(sam3_ctx *ctx, int width, int height);
enum sam3_error sam3_set_text(sam3_ctx *ctx, const char *text);
enum sam3_error sam3_precache_image(sam3_ctx *ctx, const uint8_t *pixels,
				    int width, int height);
enum sam3_error sam3_cache_save_image(sam3_ctx *ctx,
				      const uint8_t *pixels,
				      int width, int height,
				      const char *path);
enum sam3_error sam3_cache_load_image(sam3_ctx *ctx, const char *path);
enum sam3_error sam3_segment(sam3_ctx *ctx, const struct sam3_prompt *prompts,
			     int n_prompts, struct sam3_result *result);
void sam3_result_free(struct sam3_result *result);
int sam3_get_image_size(const sam3_ctx *ctx);
const char *sam3_version(void);
const char *sam3_error_str(enum sam3_error err);
void sam3_log_set_level(enum sam3_log_level level);
struct sam3_video_object_mask {
	int    obj_id;            
	float *mask;              
	int    mask_h, mask_w;
	float  iou_score;
	float  obj_score_logit;   
	int    is_occluded;       
};
struct sam3_video_frame_result {
	int frame_idx;
	int n_objects;
	struct sam3_video_object_mask *objects;
};
void sam3_video_frame_result_free(struct sam3_video_frame_result *r);
struct sam3_video_start_opts {
	size_t frame_cache_backend_budget; 
	size_t frame_cache_spill_budget;   
	int    clear_non_cond_window;      
	int    iter_use_prev_mask_pred;    
	int    multimask_via_stability;    
	float  multimask_stability_delta;  
	float  multimask_stability_thresh; 
};
enum sam3_error sam3_video_start(sam3_ctx *ctx,
				 const char *resource_path,
				 sam3_video_session **out_session);
enum sam3_error sam3_video_start_ex(sam3_ctx *ctx,
				    const char *resource_path,
				    const struct sam3_video_start_opts *opts,
				    sam3_video_session **out_session);
enum sam3_error sam3_video_add_points(sam3_video_session *session,
				      int frame_idx, int obj_id,
				      const struct sam3_point *points,
				      int n_points,
				      struct sam3_video_frame_result *result);
enum sam3_error sam3_video_add_box(sam3_video_session *session,
				   int frame_idx, int obj_id,
				   const struct sam3_box *box,
				   struct sam3_video_frame_result *result);
enum sam3_error sam3_video_add_mask(sam3_video_session *session,
				    int frame_idx, int obj_id,
				    const uint8_t *mask,
				    int mask_h, int mask_w,
				    struct sam3_video_frame_result *result);
typedef int (*sam3_video_frame_cb)(
	const struct sam3_video_frame_result *result,
	void *user_data);
enum sam3_error sam3_video_propagate(sam3_video_session *session,
				     int direction,
				     sam3_video_frame_cb callback,
				     void *user_data);
enum sam3_error sam3_video_remove_object(sam3_video_session *session,
					 int obj_id);
enum sam3_error sam3_video_reset(sam3_video_session *session);
void sam3_video_end(sam3_video_session *session);
int sam3_video_frame_count(const sam3_video_session *session);