include/sam3/sam3_types.h


enum sam3_error {
	SAM3_OK       =  0,
	SAM3_EINVAL   = -1,  
	SAM3_ENOMEM   = -2,  
	SAM3_EIO      = -3,  
	SAM3_EBACKEND = -4,  
	SAM3_EMODEL   = -5,  
	SAM3_EDTYPE   = -6,  
};
enum sam3_dtype {
	SAM3_DTYPE_F32,
	SAM3_DTYPE_F16,
	SAM3_DTYPE_BF16,
	SAM3_DTYPE_I32,
	SAM3_DTYPE_I8,
	SAM3_DTYPE_Q8_0,   
};
enum sam3_prompt_type {
	SAM3_PROMPT_POINT,
	SAM3_PROMPT_BOX,
	SAM3_PROMPT_MASK,
};
struct sam3_point {
	float x;
	float y;
	int   label;
};
struct sam3_box {
	float x1;
	float y1;
	float x2;
	float y2;
};
struct sam3_prompt {
	enum sam3_prompt_type type;
	union {
		struct sam3_point point;
		struct sam3_box   box;
		struct {
			const float *data;
			int          width;
			int          height;
		} mask;
	};
};
struct sam3_result {
	float *masks;        
	float *iou_scores;   
	int    n_masks;
	int    mask_height;
	int    mask_width;
};
typedef struct sam3_ctx sam3_ctx;